add /api/engines; move stuff to utils (closes #17)
